--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ msgpack = "^1.0.4"
 pydantic = "^1.10.2"
 # -- Linux Dependencies
 # - `evdev` Dependency: For mouse-events (reading+?)
-evdev = { version = "^1.6.0", marker = "sys_platform = 'linux'" }
+evdev = { version = "^1.6.0", platform = "linux" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
