--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 websockets = "^10.3"
 msgpack = "^1.0.4"
 pydantic = "^1.10.2"
@@ -13,11 +13,11 @@ pydantic = "^1.10.2"
 # - `evdev` Dependency: For mouse-events (reading+?)
 evdev = { version = "^1.6.0", platform = "linux" }
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
-mypy = "^0.971"
-flake8 = "^5.0.4"
 black = { version = "^22.8.0", allow-prereleases = true }
+mypy = "^0.991"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
